# Captain_Hook

./: .breakpoints  .env  .env.example  .gitignore  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  auto.sqlite  bank.sqlite  captain_hook_data.sqlite  config.json  converters.py  data.sqlite  main.py  main.sqlite  package-lock.json  package.json  prefixes.db  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  runtime.txt  server.py
.cache/nix/: binary-cache-v6.sqlite  fetcher-cache-v1.sqlite
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json  store.json243543682
cogs/: funtions.py  idk.py
images/: fortunes.py
src/: config.json  index.js
src/commands/action/: actions.js
src/commands/animals/: capybara.js  cat.js  catfact.js  catgif.js  catty.js  dog.js  dogfact.js  duck.js  fox.js
src/commands/anime/: anime.js  aninews.js  character.js
src/commands/economy/: bal.js  beg.js  daily.js  deposit.js  economy.js  gamble.js  give.js  leaderboard.js  rob.js  withdraw.js  work.js
src/commands/fun/: 8ball.js  coinflip.js  combine.js  dadjoke.js  eject.js  evil.js  f.js  fight.js  fortune.js  hack.js  hotcalc.js  meme.js  quote.js  ranick.js  rate.js  reverse.js  roast.js  roll.js  say.js  (+4 more)
src/data/: fortunes.json  questions.txt  typingtext.txt
src/events/: guildCreate.js  guildDelete.js  interactionCreate.js  messageCreate.js  messageDelete.js  ready.js
src/handlers/: commandHandler.js  eventHandler.js  registerSlashCommands.js
src/utils/: database.js  economy.js  embedBuilder.js  helpers.js  voiceHelper.js
(+77 files in other folders)
